profiles moved to shared components.

--- a/packages/web/src/shared/components/profiles/pages.module.scss
+++ b/packages/web/src/shared/components/profiles/pages.module.scss
@@ -1,18 +1,18 @@
 .content {
   & > h1 {
-    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl my-8 first:mt-0;
   }
 
   & > h2 {
-    @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
+    @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight transition-colors mt-8 first:mt-0 mb-4;
   }
 
   & > h3 {
-    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+    @apply scroll-m-20 text-2xl font-semibold tracking-tight mt-6 first:mt-0 mb-4;
   }
 
   & > h4 {
-    @apply scroll-m-20 text-xl font-semibold tracking-tight;
+    @apply scroll-m-20 text-xl font-semibold tracking-tight mt-4 first:mt-0 mb-2;
   }
 
   & > p {
