--- a/packages/web/src/app/globals.css
+++ b/packages/web/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --foreground: 0 0% 37%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
@@ -24,6 +24,9 @@
 
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --link: 223 28% 47%;
+    --link-foreground: 209 73% 43%;
 
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
@@ -66,14 +69,62 @@
 
     --ring: 217.2 32.6% 17.5%;
   }
-}
 
-@layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+  }
+
+  h1 {
+    @apply font-serif scroll-m-20 text-4xl font-extrabold lg:text-5xl my-8 first:mt-0;
+    /*  className="text-3xl sm:text-3xl md:text-5xl lg:text-6xl" */
+  }
+
+  h2 {
+    @apply font-serif scroll-m-20 pb-2 text-3xl font-semibold transition-colors mt-8 first:mt-0 mb-4;
+  }
+
+  h3 {
+    @apply font-serif scroll-m-20 text-2xl font-semibold mt-6 first:mt-0 mb-4;
+  }
+
+  h4 {
+    @apply font-serif scroll-m-20 text-xl font-semibold mt-4 first:mt-0 mb-2;
+  }
+
+  p {
+    @apply leading-7 mb-6;
+
+    &.lead {
+      @apply text-xl text-muted-foreground;
+    }
+  }
+
+  blockquote {
+    @apply mt-6 border-l-2 pl-6 italic;
+  }
+
+  code {
+    @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+  }
+
+  pre {
+    @apply mt-6 p-4 bg-muted rounded-md;
+  }
+
+  ul {
+    @apply my-6 ml-6 list-disc [&>li]:mt-2;
+  }
+
+  a {
+    @apply font-medium hover:text-link-foreground underline-offset-4;
+  }
+
+  strong {
+    @apply font-medium text-primary;
   }
 }
