--- a/packages/web/src/app/globals.css
+++ b/packages/web/src/app/globals.css
@@ -1,72 +1,56 @@
+@import "node_modules/modern-normalize/modern-normalize.css";
+
 @tailwind base;
+
 @tailwind components;
+
 @tailwind utilities;
 
 @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 37%;
-
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
-
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
-
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
-
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
-
     --link: 223 28% 47%;
     --link-foreground: 209 73% 43%;
-
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
-
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
-
     --ring: 215 20.2% 65.1%;
-
     --radius: 0.5rem;
   }
 
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
-
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
-
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
-
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
-
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
-
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
-
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
-
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
-
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 85.7% 97.3%;
-
     --ring: 217.2 32.6% 17.5%;
   }
 
@@ -96,10 +80,6 @@
     @apply font-serif scroll-m-20 text-xl font-medium mt-4 first:mt-0 mb-2;
   }
 
-  hr {
-    border: 1px inset;
-  }
-
   p {
     @apply leading-7 mb-6;
 
@@ -125,7 +105,7 @@
   }
 
   a {
-    @apply font-medium hover:text-link-foreground underline-offset-4;
+    @apply font-medium text-link hover:text-link-foreground no-underline underline-offset-4;
   }
 
   strong {
