--- a/packages/web/src/shared/components/profiles/pages.module.scss
+++ b/packages/web/src/shared/components/profiles/pages.module.scss
@@ -1,5 +1,5 @@
 .content {
-  & a {
-    @apply text-link hover:text-link-foreground;
-  }
+  // & a {
+    // @apply text-link hover:text-link-foreground;
+  // }
 }
