multi-layout system.

--- a/packages/web/src/app/globals.css
+++ b/packages/web/src/app/globals.css
@@ -1,3 +1,19 @@
+/*
+  globals.css is a great place to define global CSS variables and rules.
+  Additionally, if you install any additional CSS packages, import them here.
+
+  But, be mindful of what you put here. Every rule you put here will be
+  applied globally, which could have unintended design consequences.
+
+  Rules:
+  - DO use CSS variables for colors, fonts, and other dynamic values
+  - DO use Tailwind CSS rules with @apply directives as much as possible
+  - DO keep in mind there can be different layouts, so bundle color schemes,
+    font styles, font sizes, and other values with their respective layouts
+  - DO NOT import reset or normalize css rules other than already existing here
+  - DO NOT use Tailwind CSS rules directly in your components
+*/
+
 @import "node_modules/modern-normalize/modern-normalize.css";
 
 @tailwind base;
@@ -7,108 +23,32 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 37%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --link: 223 28% 47%;
-    --link-foreground: 209 73% 43%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-    --ring: 215 20.2% 65.1%;
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 85.7% 97.3%;
-    --ring: 217.2 32.6% 17.5%;
-  }
-
   * {
     @apply border-border;
   }
 
   body {
-    @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 
-  h1 {
-    @apply font-serif scroll-m-20 text-4xl font-semibold lg:text-5xl my-8 first:mt-0;
-    /*  className="text-3xl sm:text-3xl md:text-5xl lg:text-6xl" */
-  }
-
-  h2 {
-    @apply font-serif scroll-m-20 pb-2 text-3xl font-medium transition-colors mt-8 first:mt-0 mb-4;
-  }
-
-  h3 {
-    @apply font-serif scroll-m-20 text-2xl font-medium mt-6 first:mt-0 mb-4;
-  }
-
-  h4 {
-    @apply font-serif scroll-m-20 text-xl font-medium mt-4 first:mt-0 mb-2;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply break-words;
   }
 
   p {
-    @apply leading-7 mb-6;
-
-    &.lead {
-      @apply text-xl text-muted-foreground;
-    }
-  }
-
-  blockquote {
-    @apply mt-6 border-l-2 pl-6 italic;
-  }
-
-  code {
-    @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
-  }
-
-  pre {
-    @apply mt-6 p-4 bg-muted rounded-md;
-  }
-
-  ul {
-    @apply my-6 ml-6 list-disc [&>li]:mt-2;
+    @apply break-words;
   }
 
   a {
-    @apply font-medium text-link hover:text-link-foreground no-underline underline-offset-4;
+    @apply break-words;
   }
 
-  strong {
-    @apply font-medium text-primary;
+  img {
+    @apply max-w-full	object-cover;
   }
 }
