--- a/packages/web/src/shared/components/layouts/default/layout.css
+++ b/packages/web/src/shared/components/layouts/default/layout.css
@@ -45,6 +45,8 @@
     --primary-foreground: 222.2 47.4% 11.2%;
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
+    --link: 223 28% 57%;
+    --link-foreground: 209 73% 53%;
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
@@ -116,8 +118,5 @@
 
   strong {
     @apply font-medium text-primary;
-  }
-
-  .prose {
   }
 }
