multi-layout system (take IV).

--- a/packages/web/src/app/globals.css
+++ b/packages/web/src/app/globals.css
@@ -23,9 +23,9 @@
 @tailwind utilities;
 
 @layer base {
-  * {
+  /* * {
     @apply border-border;
-  }
+  } */
 
   body {
     font-feature-settings: "rlig" 1, "calt" 1;
