--- a/packages/web/src/shared/components/layouts/default/header.module.css
+++ b/packages/web/src/shared/components/layouts/default/header.module.css
@@ -1,15 +1,11 @@
 .header {
   @apply sticky top-0 z-40 w-full bg-accent border-0 border-b-2 border-solid border-b-border;
 
-  & .inner-container {
-    @apply container flex h-16 items-center;
+  & > :first-child {
+    @apply container flex py-3 items-center;
 
     & a {
-      @apply text-foreground no-underline;
-    }
-
-    & .extension {
-      @apply flex-1 flex;
+      @apply text-foreground hover:text-link-hover no-underline;
     }
   }
 }
