minor style changes (take IV).

--- a/packages/web/src/shared/components/layouts/default/layout.css
+++ b/packages/web/src/shared/components/layouts/default/layout.css
@@ -61,12 +61,16 @@
     --ring: 217.2 32.6% 17.5%;
   }
 
+  html {
+    @apply text-[14px];
+  }
+
   body {
     @apply bg-background text-foreground leading-extra-loose min-h-screen subpixel-antialiased;
   }
 
   h1 {
-    @apply font-serif text-4xl lg:text-5xl mt-8 mb-0;
+    @apply font-serif font-medium text-4xl lg:text-5xl mt-8 mb-0;
     /* scroll-m-20 text-4xl font-semibold lg:text-5xl my-8 first:mt-0 */
     /* text-3xl sm:text-3xl md:text-5xl lg:text-6xl */
 
@@ -76,26 +80,26 @@
   }
 
   h2 {
-    @apply font-serif text-3xl mt-4 mb-0;
+    @apply font-serif font-normal text-2xl mt-4 mb-0;
     /* scroll-m-20 pb-2 text-3xl font-medium transition-colors mt-8 first:mt-0 mb-4 */
   }
 
   h3 {
-    @apply font-serif text-2xl mt-2 mb-0;
+    @apply font-serif font-normal text-xl mt-2 mb-0;
     /* scroll-m-20 text-2xl font-medium mt-6 first:mt-0 mb-4 */
   }
 
   h4 {
-    @apply font-serif text-xl my-0;
+    @apply font-serif font-normal text-lg my-0;
     /* scroll-m-20 text-xl font-medium mt-4 first:mt-0 mb-2 */
   }
 
   h5 {
-    @apply font-serif my-0;
+    @apply font-serif font-normal text-base my-0;
   }
 
   h6 {
-    @apply font-serif my-0;
+    @apply font-serif font-normal text-base my-0;
   }
 
   p {
@@ -120,7 +124,7 @@
 
   ul,
   ol {
-    @apply mt-0 mb-4 mx-0 pl-5 pr-0 list-disc;
+    @apply mt-0 mb-4 mx-0 pl-10 pr-0 list-disc;
 
     & > li {
       @apply text-start;
