minor style changes (take V).

--- a/packages/web/src/shared/components/layouts/default/layout.css
+++ b/packages/web/src/shared/components/layouts/default/layout.css
@@ -62,35 +62,35 @@
   }
 
   html {
-    @apply text-[14px];
+    @apply text-[18px];
   }
 
   body {
-    @apply bg-background text-foreground leading-extra-loose min-h-screen subpixel-antialiased;
+    @apply bg-background text-foreground text-xs sm:text-sm md:text-base leading-extra-loose min-h-screen subpixel-antialiased;
   }
 
   h1 {
-    @apply font-serif font-medium text-4xl lg:text-5xl mt-8 mb-0;
+    @apply font-serif font-medium text-2xl sm:text-3xl md:text-4xl lg:text-5xl mt-8 mb-0;
     /* scroll-m-20 text-4xl font-semibold lg:text-5xl my-8 first:mt-0 */
     /* text-3xl sm:text-3xl md:text-5xl lg:text-6xl */
 
     &.hero {
-      @apply text-4xl md:text-5xl lg:text-6xl leading-none my-10;
+      @apply text-3xl sm:text-4xl md:text-5xl lg:text-6xl leading-none my-10;
     }
   }
 
   h2 {
-    @apply font-serif font-normal text-2xl mt-4 mb-0;
+    @apply font-serif font-normal text-base sm:text-lg md:text-xl lg:text-2xl mt-4 mb-0;
     /* scroll-m-20 pb-2 text-3xl font-medium transition-colors mt-8 first:mt-0 mb-4 */
   }
 
   h3 {
-    @apply font-serif font-normal text-xl mt-2 mb-0;
+    @apply font-serif font-normal text-base md:text-lg lg:text-xl mt-2 mb-0;
     /* scroll-m-20 text-2xl font-medium mt-6 first:mt-0 mb-4 */
   }
 
   h4 {
-    @apply font-serif font-normal text-lg my-0;
+    @apply font-serif font-normal text-base lg:text-lg my-0;
     /* scroll-m-20 text-xl font-medium mt-4 first:mt-0 mb-2 */
   }
 
