--- a/packages/web/src/shared/components/layouts/default/header.module.css
+++ b/packages/web/src/shared/components/layouts/default/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  @apply sticky top-0 z-40 w-full bg-accent border-0 border-b-2 border-solid border-b-border;
+  @apply sticky top-0 z-40 w-full bg-border border-0 border-b-2 border-solid border-b-border-shadow;
 
   & > :first-child {
     @apply container flex py-3 items-center;
