lists replaced by cards.

--- a/packages/web/src/shared/components/profiles/widgets/cards.module.css
+++ b/packages/web/src/shared/components/profiles/widgets/cards.module.css
@@ -3,7 +3,7 @@
 }
 
 .card {
-  @apply no-underline;
+  @apply no-underline min-h-[12rem];
 
   & > .inner {
     @apply w-full h-full flex flex-col bg-card text-card-foreground rounded-l-lg rounded-br-lg border border-slate-200 shadow-md;
