--- a/packages/web/src/shared/components/profiles/widgets/cards.module.css
+++ b/packages/web/src/shared/components/profiles/widgets/cards.module.css
@@ -16,7 +16,7 @@
       @apply flex items-center justify-center px-4 h-[10em];
 
       & > img {
-        @apply w-auto h-auto;
+        @apply rounded-full w-auto h-auto;
       }
     }
 
