--- a/packages/web/src/shared/components/profiles/widgets/astronaut.module.css
+++ b/packages/web/src/shared/components/profiles/widgets/astronaut.module.css
@@ -1,8 +1,11 @@
-.astronaut {
-  animation: float 2s infinite ease-in;
+.container {
+  & .stars {
+    @apply absolute;
+  }
 
-  & > img {
-    @apply object-contain;
+  & .astronaut {
+    @apply object-contain p-[50px];
+    animation: float 2s infinite ease-in;
   }
 }
 
