--- a/src/shared/components/layouts/default/layout.css
+++ b/src/shared/components/layouts/default/layout.css
@@ -1,5 +1,138 @@
 @reference "../../../globals.css";
 
+:root {
+  --radius: 0.625rem;
+  --background: oklch(100% 0 0);
+  --foreground: oklch(33.69% 0.031 282.62);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.129 0.042 264.695);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.129 0.042 264.695);
+  --primary: oklch(78.73% 0.170 142.12);
+  --primary-foreground: oklch(100% 0 0);
+  --secondary: oklch(0.968 0.007 247.896);
+  --secondary-foreground: oklch(0.208 0.042 265.755);
+  --muted: oklch(0.968 0.007 247.896);
+  --muted-foreground: oklch(0.554 0.046 257.417);
+  --accent: oklch(0.968 0.007 247.896);
+  --accent-foreground: oklch(0.208 0.042 265.755);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.929 0.013 255.508);
+  --input: oklch(0.929 0.013 255.508);
+  --ring: oklch(0.704 0.04 256.788);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.984 0.003 247.858);
+  --sidebar-foreground: oklch(0.129 0.042 264.695);
+  --sidebar-primary: oklch(0.208 0.042 265.755);
+  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-accent: oklch(0.968 0.007 247.896);
+  --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
+  --sidebar-border: oklch(0.929 0.013 255.508);
+  --sidebar-ring: oklch(0.704 0.04 256.788);
+}
+
+.dark {
+  --background: oklch(0.129 0.042 264.695);
+  --foreground: oklch(0.984 0.003 247.858);
+  --card: oklch(0.208 0.042 265.755);
+  --card-foreground: oklch(0.984 0.003 247.858);
+  --popover: oklch(0.208 0.042 265.755);
+  --popover-foreground: oklch(0.984 0.003 247.858);
+  --primary: oklch(0.929 0.013 255.508);
+  --primary-foreground: oklch(0.208 0.042 265.755);
+  --secondary: oklch(0.279 0.041 260.031);
+  --secondary-foreground: oklch(0.984 0.003 247.858);
+  --muted: oklch(0.279 0.041 260.031);
+  --muted-foreground: oklch(0.704 0.04 256.788);
+  --accent: oklch(0.279 0.041 260.031);
+  --accent-foreground: oklch(0.984 0.003 247.858);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.551 0.027 264.364);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.208 0.042 265.755);
+  --sidebar-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-accent: oklch(0.279 0.041 260.031);
+  --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.551 0.027 264.364);
+}
+
+/* :root {
+  --background-old: 228 33.33% 97.06%;
+  --background: 0 0% 100%;
+  --foreground: 0 0% 37%;
+  --muted: 210 40% 96.1%;
+  --muted-foreground: 215.4 16.3% 46.9%;
+  --popover: 0 0% 100%;
+  --popover-foreground: 222.2 84% 4.9%;
+  --card: 0 0% 98.98%;
+  --card-foreground: 0 0% 37%;
+  --border-old: 210 40% 95.1%;
+  --border: 0 0% 90.98%;
+  --border-shadow: 0 0% 72.78%;
+  --input: 214.3 31.8% 91.4%;
+  --primary: 222.2 47.4% 11.2%;
+  --primary-foreground: 210 40% 98%;
+  --secondary: 210 40% 96.1%;
+  --secondary-foreground: 222.2 47.4% 11.2%;
+  --link: 223 28% 47%;
+  --link-hover: 209 73% 43%;
+  --accent-old: 214.3 31.8% 91.4%;
+  --accent: 214.3 31.8% 91.4%;
+  --accent-foreground: 222.2 47.4% 11.2%;
+  --bright: 49 99% 67%;
+  --bright-foreground: 280 62% 17%;
+  --safe: 117.45 52.81% 82.55%;
+  --safe-foreground: 158.18 57.89% 26.08%;
+  --destructive: 0 84.2% 60.2%;
+  --destructive-foreground: 210 40% 98%;
+  --ring: 215 20.2% 65.1%;
+  --radius: 0.5rem;
+}
+
+.dark {
+  --background-old-2: 200.63 43.24% 14.51%;
+  --background-old: 222.2 84% 4.9%;
+  --background: 215 27.91% 16.86%;
+  --foreground: 217.89 10.61% 64.9%;
+  --muted: 217.2 32.6% 17.5%;
+  --muted-foreground: 215 20.2% 65.1%;
+  --popover: 222.2 84% 4.9%;
+  --popover-foreground: 210 40% 98%;
+  --card: 215 27.91% 18.86%;
+  --card-foreground: 217.89 10.61% 64.9%;
+  --border: 222.2 47.4% 11.2%;
+  --border-shadow: 222.2 47.4% 8.96%;
+  --input: 217.2 32.6% 17.5%;
+  --primary: 210 40% 98%;
+  --primary-foreground: 222.2 47.4% 11.2%;
+  --secondary: 222.2 47.4% 11.2%;
+  --secondary-foreground: 210 40% 98%;
+  --link: 198.63 88.66% 48.43%;
+  --link-hover: 209 73% 53%;
+  --accent: 217.2 32.6% 17.5%;
+  --accent-foreground: 210 40% 98%;
+  --bright: 49 99% 67%;
+  --bright-foreground: 280 62% 17%;
+  --safe: 117.45 52.81% 82.55%;
+  --safe-foreground: 158.18 57.89% 26.08%;
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 0 85.7% 97.3%;
+  --ring: 217.2 32.6% 17.5%;
+} */
+
 html {
   @apply text-[18px];
 }
@@ -33,10 +166,6 @@ h1 {
   @apply font-serif font-medium text-2xl sm:text-3xl md:text-4xl lg:text-5xl mt-8 mb-0;
   /* scroll-m-20 text-4xl font-semibold lg:text-5xl my-8 first:mt-0 */
   /* text-3xl sm:text-3xl md:text-5xl lg:text-6xl */
-
-  &.hero {
-    @apply text-3xl sm:text-4xl md:text-5xl lg:text-6xl leading-none my-10;
-  }
 }
 
 h2 {
@@ -114,7 +243,11 @@ main,
   }
 }
 
-a {
+a:is(.button) {
+  @apply no-underline;
+}
+
+a:not(.button) {
   @apply text-accent-foreground hover:text-accent underline underline-offset-4;
   /* font-medium */
 }
