chore: minor optimizations (take V).

--- a/src/shared/components/widgets/astronaut/astronaut.module.css
+++ b/src/shared/components/widgets/astronaut/astronaut.module.css
@@ -1,6 +1,8 @@
+@reference "../../../globals.css";
+
 .container {
   & .stars {
-    @apply absolute;
+    @apply absolute fill-border;
   }
 
   & .astronaut {
