--- a/src/shared/components/page-layouts/default/header.module.css
+++ b/src/shared/components/page-layouts/default/header.module.css
@@ -1,7 +1,7 @@
 @reference "../../../globals.css";
 
 .header {
-  @apply sticky top-0 z-40 w-full bg-border border-0 border-b-2 border-solid border-b-sidebar-border;
+  @apply sticky top-0 z-40 w-full bg-secondary border-0 border-b-2 border-solid border-b-sidebar-border;
 
   & > :first-child {
     @apply container mx-auto flex pl-3 pr-1 md:pl-4 md:pr-3 py-1 md:py-3 items-center;
