style: minor styling issues are fixed.

--- a/src/shared/components/page-layouts/default/page-layout.css
+++ b/src/shared/components/page-layouts/default/page-layout.css
@@ -274,7 +274,7 @@ a:is(.button) {
   @apply no-underline;
 }
 
-a:not(.button) {
+a:not([role="button"], [role="menuitem"]) {
   @apply text-foreground hover:text-accent-foreground underline underline-offset-4;
   /* font-medium */
 }
