--- a/src/shared/components/page-layouts/default/page-layout.css
+++ b/src/shared/components/page-layouts/default/page-layout.css
@@ -181,8 +181,16 @@ body {
     @apply font-serif break-words text-base sm:text-lg md:text-xl lg:text-2xl leading-none mb-4;
   }
 
-  ol, p, ul {
-    @apply break-words leading-loose mt-0 mb-4;
+  ol, ul, p {
+    @apply break-words leading-loose mb-4;
+  }
+
+  ul, ol {
+    @apply pl-10 list-disc;
+
+    & > li {
+      @apply text-start;
+    }
   }
 
   p {
@@ -190,63 +198,11 @@ body {
   }
 }
 
-/* h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  @apply break-words;
-}
-
-p {
-  @apply break-words;
-}
-
-a {
-  @apply break-words;
-}
-
+/*
 img {
   @apply max-w-full object-cover;
 }
-
-h1 {
-  @apply font-serif font-medium text-2xl sm:text-3xl md:text-4xl lg:text-5xl;
-}
-
-h2 {
-  @apply font-serif font-normal text-base sm:text-lg md:text-xl lg:text-2xl;
-}
-
-h3 {
-  @apply font-serif font-normal text-base md:text-lg lg:text-xl;
-}
-
-h4 {
-  @apply font-serif font-normal text-base lg:text-lg;
-}
-
-h5 {
-  @apply font-serif font-normal text-base;
-}
-
-h6 {
-  @apply font-serif font-normal text-base;
-}
-
-p {
-  @apply text-justify;
-}
-
-ul,
-ol {
-  @apply mt-0 mb-4 mx-0 pl-10 pr-0 list-disc;
-
-  & > li {
-    @apply text-start;
-  }
-} */
+*/
 
 a:is(.button) {
   @apply no-underline;
