--- a/src/shared/components/page-layouts/default/footer.module.css
+++ b/src/shared/components/page-layouts/default/footer.module.css
@@ -2,10 +2,16 @@
 
 .footer {
   & > :first-child {
-    @apply container mx-auto px-4 py-6 flex flex-col sm:flex-row gap-2 sm:gap-4 text-sm;
+    @apply container mx-auto px-4 py-6 flex flex-col sm:flex-row justify-between sm:items-center gap-6 sm:gap-0;
 
-    & .div {
-      @apply h-auto;
+    & > .links {
+      @apply flex flex-col sm:flex-row gap-2 sm:gap-4 text-sm;
+
+      & .div {
+        @apply h-auto;
+      }
     }
+
+    & > .locales {}
   }
 }
