--- a/src/shared/components/page-layouts/default/page-layout.css
+++ b/src/shared/components/page-layouts/default/page-layout.css
@@ -10,7 +10,7 @@
   --card-foreground: oklch(0.129 0.042 264.695);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
-  --primary: oklch(0.7873 0.170 142.12);
+  --primary: oklch(0.7873 0.17 142.12);
   --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.968 0.007 247.896);
   --secondary-foreground: oklch(0.208 0.042 265.755);
@@ -181,11 +181,14 @@ body {
     @apply font-serif break-words text-base sm:text-lg md:text-xl lg:text-2xl leading-none mb-4;
   }
 
-  ol, ul, p {
+  ol,
+  ul,
+  p {
     @apply break-words leading-loose mb-4;
   }
 
-  ul, ol {
+  ul,
+  ol {
     @apply pl-10 list-disc;
 
     & > li {
